test/error/UnreachableIf.fu
public static class Test
{
	public static bool Run()
	{
		if (true)
			return true;
		else
			return false;
		if (true) //ERROR: Unreachable statement
			return false;
		return false;
	}
}
